# moe_bot_archive

./: .gitattributes  .gitignore  .pre-commit-config.yaml  anahtar_olustur.py  arayuz_deneme.py  eminlik_deneme.py  exe_olustur.py  exe_olustur_nuitka.ps1  exe_olustur_pyinstaller.py  gorsel_deneme.py  imgs  logingui.py  moe_bot_profille.py  moe_bot_program.py  moe_bot_program.spec  program_ac.py  pyproject.toml  readme.md  requirements.dev.in  requirements.in  requirments-dev.in  requirments.in
.pre-commit-scripts/: check-is-disabled-partially.py
coordinates/: regions.xlsx
karalama_dosyaları/: Gather_Bot_v3.1.py.ignore  ana_islem.old.py  ayarlar.py  classmethod_ve_global.py  context.py  dxxml_parse.py  enumlar.py  gorsel_uzanti_degis.py  gorselleri_yeniden_boyutlandir.py  instance_func_override.py  kamp_arayuz.py  kamp_islem.py  karalama_dosyası.py  mouse-konum.py  multiprocessing_event.py  multiprocessing_karamala.py  object_life_test.py  procces.py  process_konusma.py  process_paylasim.py  program.py  pynput_deneme.py  reimport_test_base_module.py  reimport_test_main.py  reimport_test_module1.py  reimport_test_module2.py  sabitler_hafiza_kullanimi.py  screenshot.py  sozluk_birlestirme.py  tespit_islem.old.py  test.py  test2.py  yeniden_numaralandır.py
karalama_dosyaları/arayuz/: login_ui.py
karalama_dosyaları/ayarlar_modulu_karalama/: ayarlar.py  ayarlar_kullanimi.py  moe_gatherer.py  moe_general.py
moe_bot/: __init__.py  __main__.py  _del_moe_gatherer_sabilter.py  arayuz.py  arayuz_temel.py  engelislem.py  enumlar.py  gunlukcu.py  hatalar.py  kaynakislem.py  moe_bot.py  moe_engelislem.py  moe_gatherer.py  sabilter.py  sifremele.py  sunucu_islemleri.py  tarayicilar.py  temel_fonksiyonlar.py  temel_siniflar.py  types.py  yonetici.py
moe_bot/ayarlar/: Ayarlar.py  arayuz_ayarları.py  genel_ayarlar.py  moe_engelislem.py  moe_gatherer.py  moe_general.py
moe_bot/lokalizasyon/: __ignore__.py  en.py  get_all_keys.py  tr.py
moe_bot/mod/: arayuz_gatherer.py  moe_engelislem.py  moe_gatherer_islem.py  moe_genel.py  moe_kamp_islem.py
moe_gatherer/: __init__.py  __main__.py  anahtar_olusturucu.py  arayuz.py  engelislem.py  engelislem.py.old  gunlukcu.py  hatalar.py  kaynakislem.py  lokalizasyon.py  moe_gatherer.py  sabitler.py  sunucu_islemleri.py  tarayicilar.py  temel_fonksiyonlar.py  temel_siniflar.py  yonetici.py
moe_gatherer/lokalizasyon/: en.py  tr.py
tests/: DosyaIslemleri_test.py  GelismisKare_test.py  Genel_test.py  KaynakFare_test.py  KaynakKare_test.py  KaynakTarayici_test.py  Lokalizasyon_test.py  SunucuIslem_test.py  Tarayicilar_test.py  context.py  test_DosyaIslemleri.py  test_KaynakKare.py
