[tool.poetry]
name = "moe_gatherer"
version = "0.7.5"
description = "march of empires gatherer"
authors = ["a a <a@example.com>"]
readme = "readme.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
opencv-python-headless = ">=4.8"
pyautogui = "^0.9"
pynput = "^1.7.6"
pylightxl = "^1.61"
pywin32 = "^306"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.1"
ruff-lsp = ">=0.0.38"
isort = ">=5.12.0"
black = ">=23.7.0"
pyinstaller = {  version = "^5.12",python = ">=3.11,<3.12"}
# pywin32-ctype = "^0.2.2" # already satisfied by pywin32 ,i think
pre-commit = ">=3.4"

[tool.black]
python = "^3.11"
line-length = 135

[tool.ruff]
line-length = 135

[tool.pytest.ini_options]
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
log_cli = 1
log_cli_level = "DEBUG"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
moe_gatherer = "moe_gatherer.__main__:main"
program_ac = "program_ac:main"
anahtar_olustur = "anahtar_olustur:main"
exe_olustur = "exe_olustur:main"
