[project]
name = "moe_bot"
version = "0.10.2"
description = "moe helper bot"


[tool.poetry]
name = "moe_bot"
version = "0.10.2"
description = "moe helper bot"
authors = ["a a <a@example.com>"]
readme = "readme.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
opencv-python-headless = ">=4.8"
pyautogui = "^0.9"
pynput = "^1.7.6"
pylightxl = "^1.61"
pywin32 = "^306"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.1"
ruff-lsp = ">=0.0.38"
isort = ">=5.12.0"
black = ">=23.7.0"
pyinstaller = {  version = "^5.12",python = ">=3.11,<3.12"}
pre-commit = ">=3.4"

[tool.black]
python = "^3.11"
line-length = 135

[tool.ruff]
line-length = 135

[tool.pytest.ini_options]
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
log_cli = 1
log_cli_level = "DEBUG"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
moe_bot_program = "moe_bot_program:main"
moe_arayuz_deneme = "moe_arayuz_deneme"
exe_olustur_pyinstaller = "exe_olustur_pyinstaller:main"

[tool.distutils.build_exe]
excludes = ["unittest"]
zip_include_packages = ["encodings", "PySide6"]
optimize = 2
bin_includes = ["imgs"]
include_files = ["imgs"]
